<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/abrirCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrirCC"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"
        style="@style/TextAppearance.AppCompat.Menu"/>
    <TextView
        android:id="@+id/cancelarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"
        style="@style/TextAppearance.AppCompat.Menu"/>
    <TextView
        android:id="@+id/atualizarCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AtualizarConta"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"
        style="@style/TextAppearance.AppCompat.Menu"/>
    <TextView
        android:id="@+id/mostrarTodasCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todasCC"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"
        style="@style/TextAppearance.AppCompat.Menu"/>
    <TextView
        android:id="@+id/mostrarTodosClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todasClientes"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="textStart"
        style="@style/TextAppearance.AppCompat.Menu"/>

</LinearLayout>